@startuml data_model

entity site_type {
    id
    --
    name
}

entity camp_site {
    id
    --
    site_type_id <<FK>>
    site_name
    addition
    access
    phone_number
    url
    price
    image_path
}
camp_site }|.. site_type

entity address {
    address_id <<FK>>
    --
    zip_code
    pref_name
    city_name
    other_address
}
address||--||camp_site

entity coordinate {
    camp_site_id <<FK>>
    --
    let
    lon
}
coordinate||--||camp_site

entity facility {
    id
    --
    camp_site_id <<FK>>
    name
    is_exist
}
facility }|.. camp_site

entity user {
    id
    --
    name
    mail_address
}

entity review {
    id
    --
    camp_site_id <<FK>>
    user_id <<FK>>
    point
    comment
}
review }|.. camp_site
review }|.. user

entity ikitai {
    user_id <<FK>>
    camp_site_id <<FK>>
}
ikitai }|.. user
ikitai }|.. camp_site

@enduml